--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "src-tauri",
   "private": true,
-  "version": "0.1.30",
+  "version": "0.0.0-dev001",
   "type": "module",
   "scripts": {
     "dev": "vite",
