--- a/src-tauri/gen/apple/src-tauri_iOS/Info.plist
+++ b/src-tauri/gen/apple/src-tauri_iOS/Info.plist
@@ -15,9 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1.27</string>
+	<string>0.0.0-dev001</string>
 	<key>CFBundleVersion</key>
-	<string>0.1.27</string>
+	<string>0.0.0-dev001</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
