--- a/src-tauri/gen/apple/src-tauri_iOS/Info.plist
+++ b/src-tauri/gen/apple/src-tauri_iOS/Info.plist
@@ -14,12 +14,14 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>0.0.0-dev001</string>
-	<key>CFBundleVersion</key>
-	<string>0.0.0-dev001</string>
+ 	<key>CFBundleShortVersionString</key>
+ 	<string>0.0.0-dev002</string>
+ 	<key>CFBundleVersion</key>
+ 	<string>0.0.0-dev002</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
-	<true/>
+	<false/>
+	<key>ITSEncryptionExportComplianceCode</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
